--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "path-browserify": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
     "react-syntax-highlighter": "^15.6.1",
