--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
     "react-syntax-highlighter": "^15.6.1",
+    "remove-markdown": "^0.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
